test/sema/typeck/generic/type-param-bounds-3.dora
trait MyTraitA {}
trait MyTraitB {}
class Foo[T: MyTraitA + MyTraitB]
class Baz[X]
impl[X] Baz[X] {
    fn bar[T: MyTraitA](arg: Foo[T]) {}
}
